2011-02-15  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        Built-in HTML5 <audio> (and sometimes <video>) UI doesn't update playhead location or time displays
        https://bugs.webkit.org/show_bug.cgi?id=46142

        Added a repaint test which ensures the timeline controls repaint in an audio-only MediaDocument.  Since
        the change also affects in-page audio, also added a repaint test for those cases as well.

        Other platforms will need to have results generated.

        * media/audio-repaint.html: Added.
        * media/media-document-audio-repaint-expected.txt: Added.
        * media/media-document-audio-repaint.html: Added.
        * platform/mac/media/audio-repaint-expected.checksum: Added.
        * platform/mac/media/audio-repaint-expected.png: Added.
        * platform/mac/media/audio-repaint-expected.txt: Added.
        * platform/mac/media/media-document-audio-repaint-expected.checksum: Added.
        * platform/mac/media/media-document-audio-repaint-expected.png: Added.
2011-02-15  Jer Noble  <jer.noble@apple.com>

        Reviewed by Darin Adler.

        Built-in HTML5 <audio> (and sometimes <video>) UI doesn't update playhead location or time displays
        https://bugs.webkit.org/show_bug.cgi?id=46142

        Push a LayoutStateMaintainer in RenderMedia::layout() before calling layout() on the
        container elements.  This is necessary because, during layout(), the child renderers
        query the current LayoutState to determine where they will be repainting.  If a new
        LayoutState is not pushed here, child renderers will attempt to repaint relative to
        their grandparent's origin instead of their parents', and repaint operations will fail.

        * rendering/RenderMedia.cpp:
        (WebCore::RenderMedia::layout):

Canonical link: https://commits.webkit.org/69241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79318 268f45cc-cd09-0410-ab3c-d52691b4dbfc